GearsetPOC/force-app/main/default/objects/FAQ_Contact_us__c/FAQ_Contact_us__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Links for Contact Us buttons on Sidebar</description>
    <label>FAQ_Contact_us</label>
</CustomObject>