GearsetPOC/force-app/main/default/objects/FAQ_Contact_us__c/fields/Dutch_Text__c.field-meta.xml
<CustomField>
    <fullName>Dutch_Text__c</fullName>
    <label>Dutch Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>