GearsetPOC/force-app/main/default/objects/FAQ_Contact_us__c/fields/French_Text__c.field-meta.xml
<CustomField>
    <fullName>French_Text__c</fullName>
    <label>French Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>