GearsetPOC/force-app/main/default/objects/FAQ_Contact_us__c/fields/German_Text__c.field-meta.xml
<CustomField>
    <fullName>German_Text__c</fullName>
    <label>German Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>