GearsetPOC/force-app/main/default/objects/FAQ_Contact_us__c/fields/icon__c.field-meta.xml
<CustomField>
    <fullName>icon__c</fullName>
    <label>icon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>