GearsetPOC/force-app/main/default/objects/FAQ_Contact_us__c/fields/url_NL__c.field-meta.xml
<CustomField>
    <fullName>url_NL__c</fullName>
    <label>url_NL</label>
    <type>Url</type>
</CustomField>