GearsetPOC/force-app/main/default/objects/FAQ_Contact_us__c/fields/url_UK__c.field-meta.xml
<CustomField>
    <fullName>url_UK__c</fullName>
    <label>url_UK</label>
    <type>Url</type>
</CustomField>